# qckrebar

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  rebarcalc.py  requirements.txt
notebooks/: README.md  calctools.py  estimate_rebars.ipynb  rebarcalc.py  sample_estimate.ipynb
notebooks/results/: cut_log.csv  rebar_estimates.csv  unused_excess.csv
tests/: README.md  rebarcalc.py  test_rebarcalc.py
